tests/baselines/reference/numericNamedPropertyDuplicates.errors.txt
==== tests/cases/compiler/numericNamedPropertyDuplicates.ts (6 errors) ====
    class C {
        1: number;
        1.0: number;
        ~~~
!!! numericNamedPropertyDuplicates.ts(3,5): error TS2000: Duplicate identifier '1.0'.
        static 2: number;
        static 2: number;
               ~
!!! numericNamedPropertyDuplicates.ts(5,12): error TS2000: Duplicate identifier '2'.
    }
    
    interface I {
        2: number;
        2.: number;
        ~~
!!! numericNamedPropertyDuplicates.ts(10,5): error TS2000: Duplicate identifier '2.'.
    }
    
    var a: {
        1: number;
        1: number;
        ~
!!! numericNamedPropertyDuplicates.ts(15,5): error TS2000: Duplicate identifier '1'.
    }
    
    var b = {
        2: 1
        2: 1
        ~
!!! numericNamedPropertyDuplicates.ts(20,5): error TS1005: ',' expected.
        ~~~~
!!! numericNamedPropertyDuplicates.ts(20,5): error TS2000: Duplicate identifier '2'.
    }